# knowledge-graph

./: .gitignore  .pre-commit-config.yaml  API.md  LICENSE  README.md  TRIGGERS.md  __init__.py  contracts_export.yaml  pyproject.toml
.github/workflows/: publish.yml
contracts/: self_evolution.yaml
copaw_ontology.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
core/: __init__.py
schema/: ontology_schema.yaml
scripts/: build_index.py  knowledge_completer.py  ontology_cli.py  visualize_graph.py  visualize_network.py  visualize_simple.py
tests/: __init__.py
