[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copaw-ontology"
version = "2.0.0"
description = "Ontology v2.0 - Advanced knowledge graph system with entity recognition, relation extraction, graph query and visualization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CoPaw Contributors"},
]
keywords = ["ontology", "knowledge-graph", "entity-recognition", "relation-extraction", "graph-query"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/lcq225/ontology"
Repository = "https://github.com/lcq225/ontology"
Issues = "https://github.com/lcq225/ontology/issues"

[project.scripts]
knowledge-graph = "knowledge_graph:main"
